--- a/evaluation.tex
+++ b/evaluation.tex
@@ -6,13 +6,13 @@
 \subsection{Data}
 \label{sec:data-sets}
 As map data, we use the data from the OpenStreetMap (OSM) project \parencite{OSMF2016}. 
-For weather data we use the hourly air temperature and relative humidity values originating from the weather station of the German Weather Service (Deutscher Wetterdienste, DWD) in Rheinstetten near Karlsruhe \parencite{DWD2016}. For a finer spatial resolution we use remote sensing data of a thermal scanner flight provided by the Nachbarschaftsverband Karlsruhe (NVK). The data set consists of two scans, recorded in the morning and in the evening of the 26 September 2008. The data are covering an area of  $\SI{25 805}{\meter} \times \SI{39 555}{\meter}$ (EW NS) and have a resolution of $5\,161 \times 7\,911$  pixels. The measured surface temperature is in the range of \SIrange{-1.7}{18.3}{\celsius} (morning and evening). The average surface temperature of the data sets cropped to the evaluated area is \SI{4.18}{\celsius} (morning) respectively \SI{11.24}{\celsius} (evening).  
+For weather data, we use the hourly air temperature and relative humidity values originating from the weather station of the German Weather Service (Deutscher Wetterdienste, DWD) in Rheinstetten near Karlsruhe \parencite{DWD2016}. For a finer spatial resolution we use remote sensing data of a thermal scanner flight provided by the Nachbarschaftsverband Karlsruhe (NVK). The data set consists of two scans, recorded in the morning and in the evening of the 26 September 2008. The data is covering an area of  $\SI{25 805}{\meter} \times \SI{39 555}{\meter}$ (EW NS) and have a resolution of $5\,161 \times 7\,911$  pixels. The measured surface temperature is in the range of \SIrange{-1.7}{18.3}{\celsius} (morning and evening). The average surface temperature of the data sets cropped to the evaluated area is \SI{4.18}{\celsius} (morning) respectively \SI{11.24}{\celsius} (evening).  
 
 
 \subsection{Data Preparation}
-First, the OSM data set is cropped to the evaluated area. Afterwards, all ways tagged with \verb|highway|, \verb|railway=platform| or \verb|public_transport=platform| are extracted to obtain the road network.
+The OSM data set is cropped to the evaluated area. Afterwards, all ways tagged with \verb|highway|, \verb|railway=platform| or \verb|public_transport=platform| are extracted to obtain the road network.
 
-To compute the edge weights as described above in section \ref{sec:edge-weighting} we need to make some assumptions. That's because the weather data that we use lack either an appropriate spatial resolution or the required temporal resolution. We assume that the actual spatial variation of the temperature conforms with the spatial variation of the thermal scans (deviation from the mean value). For the relative humidity, we assume a constant value over the study area. For the temporal variation, we assume that the temporal variation in the examined area corresponds to the temporal variation measure at the weather station. We apply the morning scan to timestamps between  00:00 and 11:59 and the evening scan between 12:00 and 23:59.
+To compute the edge weights as described above in section \ref{sec:edge-weighting} we need to make some assumptions. That is because the weather data that we use lack either an appropriate spatial resolution or the required temporal resolution. We therefore assume that the actual spatial variation of the temperature conforms with the spatial variation of the thermal scans (deviation from the mean value). For the relative humidity, we assume a constant value over the study area. For the temporal variation, we assume that the temporal variation in the examined area corresponds to the temporal variation measure at the weather station. We apply the morning scan to timestamps between  00:00 and 11:59 and the evening scan between 12:00 and 23:59.
 
 We compute the air temperature at time $t\in T$ for the raster cell $c_{ij}$ as follows:
 \begin{equation}
@@ -24,16 +24,16 @@ T_{a}^{station}(t) + \delta_{ij}^{evening} & \text{if $12 \leq t < 24$,}
 \end{equation}
 where $T_{a}^{station}(t)$ is the air temperature measured at the weather station at time $t$ and $\delta^{morning}_{ij}$ respectively  $\delta^{evening}_{ij}$ is the deviation of the raster cell $c_{ij}$ from the mean of all raster cells from the morning respectively evening scan.
 
-We compute an approximation of Steadman's heat index as proposed by \textcite[77]{Stull2011}. Since the heat index is only defined for an air temperature between \SI{20}{\celsius} and \SI{50}{\celsius} we use the air temperature as a fall-back value. If the air temperature drops in a raster cell below a comfort threshold $T_a^{comfort}$ or $T_{HI}^{comfort}$, then that comfort value will be used, because temperature below this threshold are not considered harmful. 
+We compute an approximation of Steadman's heat index as proposed by \textcite[77]{Stull2011}. Since the heat index is only defined for an air temperature between \SI{20}{\celsius} and \SI{50}{\celsius} air temperature is used as a fall-back value. If the air temperature drops in a raster cell below a comfort threshold $T_a^{comfort}$ or $T_{HI}^{comfort}$, that comfort value will be used, because temperature below this threshold are not considered harmful. 
 
-For the implementation of the routing we used the GraphHopper framework for Java \parencite{GraphHopper2016}.
+For the implementation of the routing the GraphHopper framework for Java \parencite{GraphHopper2016} is used.
 
 
 To find an optimal point in time we used the procedure described in section \ref{sec:find-optimal-time}.  
 
-For the nearby search, we  use a list of selected OSM tags like \verb|shop=supermarket| or \verb|amenity=pharmacy| as search criteria. We also only consider locations which have opening hours specified (via the \verb|opening_hours| tag). Additionally, only locations which are in a defined radius around the starting point are considered, at this we use the direct distance (“as the crow flies”). To reduce the computation effort a maximum number of results $k$ can be specified.
+For the nearby search, we use a list of selected OSM tags like \verb|shop=supermarket| or \verb|amenity=pharmacy| as search criteria. Only locations which have opening hours specified (via the \verb|opening_hours| tag) and are within a defined radius around the starting point are considered. We use the direct distance (“as the crow flies”). To reduce the computation effort a maximum number of results $k$ can be specified.
 
-As optimization algorithm, we use the implementation of Brent's method in the Apache Commons Mathematics Library \parencite{ASF2016} with 10 random start points to reduce the risk that only a local optimum is found.
+The implementation of Brent's method in the Apache Commons Mathematics Library \parencite{ASF2016} is used as optimization algorithm with 10 random start points to reduce the risk that only a local optimum is found.
 
 \subsection{Results}
 
