--- a/introduction.tex
+++ b/introduction.tex
@@ -3,17 +3,17 @@
 
 \section{Introduction}
 
-Heat is an important factor to human health and comfort. High temperatures cannot only lead to a discomfort, such as sweating, it also has serious negative effects on the health as well as on the ability to work. 
+Heat is an important factor to human health and comfort. High temperatures cannot only lead to a discomfort, it also has serious negative effects on the health as well as the ability to work. 
 
 In numerous studies an increase in both mortality and
 morbidity has been associated with a high ambient temperature \parencite{Basu2009}. The most well-known example in recent history is the 2003 heat wave in Europe. 
 Certain groups are especially vulnerable to heat stress such as older people or people with health problems \parencite{Huebler2007}. For patients with multiple sclerosis an increased body temperature can lead to a worsening of their symptoms \parencite{Davis2010}.
 
-Developments like the ageing of society, the increasing urbanisation and the climate change is making the adaptation to heat stress danger more and more important. Due to the tendency that a rising number of people is moving into the cities, the urban heat island effect (UHI) is gaining more importance in the future. The UHI effect states that an urban area can be  \SIrange{8}{12}{\celsius} warmer than the rural areas \parencite{Prashad2014}. 
+Developments like the ageing of society, the increasing urbanisation and the climate change is making the adaptation to heat stress danger more and more important. Due to the tendency that a rising number of people is moving into the cities, the urban heat island effect (UHI) is gaining more importance in the future. The UHI effect states that an urban area is significantly warmer than surrounding rural areas \parencite{Prashad2014}. 
 
-Individuals can reduce their heat stress by adapting their everyday behaviour. In a city, most typical activities are in walking distance. These can range from going to a grocery store to the visit of a doctor. And while these activities cannot be omitted, it is possible to use different routes or change the time when they are conducted. In doing so, one can easily reduce the heat stress without any negative impact on the quality of life. 
+Individuals can reduce their heat stress by adapting their everyday behaviour. In a city, most typical activities are in walking distance. These can range from going to a grocery store to the visit of a doctor. While these activities cannot be omitted, it is possible to use different routes or change the time when they are conducted. In doing so, one can easily reduce the heat stress without negative impact on the quality of life. 
 
-In this paper, we use this reasoning into a two-step approach to help individuals reduce their heat stress. First, we apply a routing algorithm to compute the optimal path in regard to the heat stress. This algorithm is then used to determine the optimal point in time to conduct typical everyday activities. 
+In this paper we use this reasoning into a two-step approach to help individuals reduce their heat stress. We apply a routing algorithm to compute the optimal path in regard to the heat stress. This algorithm is then used to determine the optimal point in time to conduct typical everyday activities. 
   
 \subsection{Related Work} 
 
@@ -39,8 +39,8 @@ For all these indices the following meteorological parameters are important:
 Based on the availability of data, in this paper we will use \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature.
 
 \subsubsection{Health Optimal Pedestrian Routing}
-Several research projects have considered environmental factors for pedestrian routing in the paste, with the goal to find routes which are healthier. For instance, \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015}.
+Several research projects have considered environmental factors for pedestrian routing in the past, with the goal to find routes which are healthier. For instance, \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail and weather. A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015}.
 
-The NaviComf framework for pedestrian routing proposed by \textcite{Dang2013} enables to improve the comfort, considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal sensors, like air temperature and humidity. To find an optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological data used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
+The NaviComf framework for pedestrian routing proposed by \textcite{Dang2013} improves the comfort considering environmental factors varying over time. Their  framework uses a multi-factor cost model for the evaluation of the route and enables a consideration of heterogeneous environmental information from multi-modal sensors. To find an optimal route \textcite{Dang2013} are proposing three different algorithms, a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing application for thermal comfort navigation. The meteorological data used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
 
-In contrast to the existing work, we contribute an approach which does not rely on extensive sensor networks. We achieve this by combining remote sensing data with in-situ weather stations and the use of a static routing algorithm.
+In contrast to the existing work, we contribute an approach which does not rely on extensive sensor networks. We achieve this by combining remote sensing data with fixed weather stations and the use of a static routing algorithm.
