--- a/paper.tex
+++ b/paper.tex
@@ -43,10 +43,10 @@
 \maketitle
 
 \begin{abstract}
-\noindent \textbf{Abstract} -- Heat stress is a serious risk, which affects in particular  groups like elderly or patients with multiple sclerosis or heart disease and is especially pronounced in cities. Developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are affected by heat stress. One way to reduce those risks is to adapt the everyday behaviour. 
-To encourage and support such a change of behaviour, we propose a two-step approach. The first step is a route planer for pedestrians that can find a route with minimal heat exposure. The second step is a tool that supports the user to select the point in time with a minimal risk of heat stress, considering e.g.\ the opening hours of a shop. The route planer is then used to calculate the heat stress and present the optimal route at that point in time.
+\noindent \textbf{Abstract} -- Heat stress is a serious risk, which affects in particular  groups like elderly or patients with chronic diseases and is especially pronounced in cities. Developments like the ageing of society, the increasing urbanisation and the climate change are increasing the people that are affected by heat stress. One way to reduce those risks is to adapt the everyday behaviour. 
+To encourage and support such a change of behaviour, we propose a two-step approach. The first step is a route planer for pedestrians that can find a route with minimal heat exposure. The second step is a tool that supports the user to select the point in time with a minimal amount of heat stress to actually go. The route planer is then used to calculate the heat stress and present the optimal route at that point in time.
 We evaluate our approach for the city of Karlsruhe. 	
-Our results show that the combined approach, as well as only its single steps, can reduce the heat exposure and therefore the heat stress for typical daily tasks.
+Our results show that the combined approach, as well as its single steps, can reduce the heat exposure and therefore the heat stress for typical daily tasks.
 \end{abstract}
 
 \keywords{Heat Stress, Time Dependent Routing, Decision Support, Urban Vulnerability}
