--- a/evaluation.tex
+++ b/evaluation.tex
@@ -111,7 +111,7 @@ In the example given in figure \ref{fig:route-example} the heat exposure is redu
 \begin{figure}
 	\centering
 	\includegraphics[scale=1]{figures/optimaltime_route_example}
-	\caption{Example for nearby search: In the graphic the starting point (black dot) as well as the locations ranked first by the respective method. (Map tiles by \textcite{Stamen2017}, under CC BY 3.0. Map data by \textcite{OSMF2016}, under ODbL)}
+	\caption{Example for nearby search: In the graphic the starting point (black dot) as well as the locations ranked best by the respective method. (Map tiles by \textcite{Stamen2017}, under CC BY 3.0. Map data by \textcite{OSMF2016}, under ODbL)}
 	\label{fig:optimaltime-route-example}
 \end{figure}
 
